# baserock-tbdiff

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.pre-autotools  README.testing  TODO  configure.ac  create.c  deploy.c  error.h  libtbd_apply.c  libtbd_create.c  libtbd_io.c  libtbd_io.h  libtbd_stat.c  libtbd_stat.h  libtbd_xattrs.c  libtbd_xattrs.h  libtdb_apply.c  otadep.txt  otap.c  otap.h  otap_apply.c  otap_create  otap_create.c  otap_deploy  spec.txt  stat.c  stat.h  tbdiff-private.h  tbdiff.h  tbdiff.morph  tbdiff_create.c  tbdiff_deploy.c  todo.txt
baserock-system-config-sync/: Makefile.am  baserock-system-config-sync  mount-system-versions-dir
baserock-system-config-sync/config-sync-tests/tests.upgrades.symblinks/v1/: sl2
baserock-system-config-sync/config-sync-tests/tests.upgrades.symblinks/v2/: sl3
baserock-system-config-sync/config-sync-tests/tests.upgrades.symblinks/vu/: sl1
baserock-system-config-sync/config-sync-tests/tests.upgrades/v1/: file4
system-version-manager/: Makefile.am  system-version-manager
tb-switch/: Makefile.am  tb-switch
tb-update/: Makefile.am  tb-update
tbdiff/: Makefile.am  tbdiff-1.pc.in  tbdiff-apply.c  tbdiff-common.h  tbdiff-create.c  tbdiff-io.c  tbdiff-io.h  tbdiff-private.h  tbdiff-stat.c  tbdiff-stat.h  tbdiff-xattrs.c  tbdiff-xattrs.h  tbdiff.h
tbdiff-create/: Makefile.am  main.c
tbdiff-deploy/: Makefile.am  main.c
tbdiff-switch/: Makefile.am  tbdiff-switch
tbdiff-update/: Makefile.am  tbdiff-update
tests/: 00_regular_file_diff.sh  00_simple_file.sh  01_regular_file_add_remove.sh  01_symlink_diff.sh  02_fifo_diff.sh  02_symlink_add_remove.sh  03_fifo_add_remove.sh  03_regular_file_add_remove.sh  04_fifo_add_remove.sh  04_symlink_diff.sh  05_symlink_add_remove.sh  06_dir_diff.sh  07_dir_add_remove.sh  08_chardev_diff.sh  09_chardev_add_remove.sh  10_blockdev_diff.sh  11_blockdev_add_remove.sh  12_socket_remove.sh  13_socket_add.sh  14_socket_diff.sh  15_xattr_add.sh  Makefile.am  cross_plat.sh  dir_add_remove.sh.disabled  fake_mounting_script.sh  fifo_add_remove.sh.disabled  fifo_diff.sh.disabled  gen.sh  lipsum.txt  patch1.tbd  patch2.tbd  run_tests.sh  sockbind.c  symlink_diff.sh.disabled  test.sh  test_lib.sh
tests/PATCHES/: patchfive.tbd  patchfour.tbd  patchone.tbd  patchseven.tbd  patchsix.tbd  patchthree.tbd  patchtwo.tbd
tests/bscs-merge.pass/sshconf.in/systems/factory/orig/etc/: sshd_config
tests/bscs-merge.pass/sshconf.in/systems/version2/orig/etc/: sshd_config
tests/bscs-merge.pass/sshconf.out/systems/factory/run/etc/: sshd_config
tests/bscs-merge.pass/sshconf.out/systems/version2/run/etc/: sshd_config
tests/bscs-merge.pass/symblinks.in/systems/factory/run/etc/: v1vu
tests/bscs-merge.pass/symblinks.out/systems/factory/orig/etc/: v1
tests/bscs-merge.pass/upgrades.in/systems/factory/orig/etc/: file7  file7.1
tests/bscs-merge.pass/upgrades.in/systems/factory/run/etc/: file2  file7
tests/bscs-merge.pass/upgrades.in/systems/version2/orig/etc/: file6  file7  file7.1
tests/bscs-merge.pass/upgrades.in/systems/version2/run/etc/: file4
tests/bscs-merge.pass/upgrades.out/systems/factory/orig/etc/: file1  file5
tests/bscs-merge.pass/upgrades.out/systems/factory/run/etc/: file5  file6
tests/bscs-merge.pass/upgrades.out/systems/version2/orig/etc/: file3
tests/bscs-merge.pass/upgrades.out/systems/version2/run/etc/: file7.rej
tests/bscs-merge.pass/upgrades.out/systems/version2/run/etc/subdir1/: subfile1
tests/bscs-sync.in/systems/version3/orig/etc/folder1/: config2
tests/bscs-sync.in/systems/version3/run/etc/: config  config1
tests/bscs-sync.out/systems/version3/orig/etc/: config1
yarns/: README  create-deploy.yarn  run_yarns.sh  sockbind.c  symtime.c  tbdiff.shell-lib
